--- a/style.css
+++ b/style.css
@@ -69,6 +69,13 @@ button:hover {
     padding: 10px;
 }
 
+#undoBtn {
+    background-color: #16e639;
+    color: white;
+    font-size: 1.2rem;
+    border-radius: 10px;
+    padding: 10px;
+}
 #clearBtn:hover {
     background-color: #e60000;
 }
